finish proto dashboard 2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "M PLUS Rounded 1c", -apple-system, BlinkMacSystemFont, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, "Helvetica Neue",
+    sans-serif;
+  @apply bg-light;
+}
+
+#__next {
+  @apply m-6;
 }
 
 a {
@@ -17,4 +23,98 @@ a {
 
 * {
   box-sizing: border-box;
+  @apply tracking-tighter text-dark;
+}
+
+h1 {
+  @apply text-xl font-extrabold;
+}
+
+h2 {
+  @apply text-lg font-bold tracking-normal;
+}
+
+header {
+  @apply flex items-center justify-between mb-6;
+}
+
+.heading {
+  @apply flex justify-between items-end mb-3;
+}
+
+.cards {
+  @apply flex gap-3 overflow-x-clip;
+}
+
+.card {
+  @apply p-5 bg-white rounded-2xl;
+
+  min-width: 16rem;
+  background: linear-gradient(145deg, #ebeaed, #ffffff);
+  box-shadow: 5px 5px 10px #d4d3d7, -5px -5px 10px #ffffff;
+  /* box-shadow: 5px 5px 5px 0px #0000000f; */
+}
+
+input {
+  @apply px-4 py-2 rounded-lg;
+}
+
+.circle_text {
+  @apply flex items-center justify-center text-xs text-white rounded-full font-semibold tracking-wide;
+}
+
+.list_item {
+  @apply p-5 rounded-2xl mb-3 bg-white flex justify-between;
+
+  background: linear-gradient(145deg, #eaeaed, #ffffff);
+  box-shadow: 5px 5px 10px #d4d3d7, -5px -5px 10px #ffffff;
+  /* box-shadow: 5px 5px 5px 0px #0000000f; */
+}
+
+.search_btn {
+  width: 40px;
+  height: 40px;
+}
+
+.card_title {
+  @apply font-bold mb-1;
+}
+
+.week_circles {
+  @apply flex justify-around;
+}
+
+.nue_circle_outer {
+  @apply flex flex-col justify-center items-center;
+
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  background: linear-gradient(145deg, #ebeaed, #ffffff);
+  box-shadow: 5px 5px 10px #d4d3d7, -5px -5px 10px #ffffff;
+}
+
+.footer {
+  @apply flex justify-center items-center;
+
+  backdrop-filter: blur(10px);
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  left: 0;
+  height: 140px;
+  box-shadow: 0px 14px 5px #d4d3d7, -2px 6px 4px #ffffff;
+}
+
+.footer_child {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.new_btn {
+  @apply flex justify-center p-3 rounded-2xl gap-3;
+
+  background-image: linear-gradient(#f76571, #f43a49);
+  box-shadow: 1px 26px 30px -12px rgb(247 88 100);
 }
