--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,11 +9,12 @@ body {
   font-family: "M PLUS Rounded 1c", -apple-system, BlinkMacSystemFont, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, "Helvetica Neue",
     sans-serif;
+
   @apply bg-light;
 }
 
 #__next {
-  @apply m-6;
+  @apply m-6 max-w-3xl lg:w-9/12 lg:mx-auto;
 }
 
 a {
@@ -52,7 +53,6 @@ header {
   min-width: 16rem;
   background: linear-gradient(145deg, #ebeaed, #ffffff);
   box-shadow: 5px 5px 10px #d4d3d7, -5px -5px 10px #ffffff;
-  /* box-shadow: 5px 5px 5px 0px #0000000f; */
 }
 
 input {
@@ -68,7 +68,6 @@ input {
 
   background: linear-gradient(145deg, #eaeaed, #ffffff);
   box-shadow: 5px 5px 10px #d4d3d7, -5px -5px 10px #ffffff;
-  /* box-shadow: 5px 5px 5px 0px #0000000f; */
 }
 
 .search_btn {
@@ -81,7 +80,7 @@ input {
 }
 
 .week_circles {
-  @apply flex justify-around;
+  @apply flex justify-around md:justify-start md:gap-5;
 }
 
 .nue_circle_outer {
@@ -95,21 +94,16 @@ input {
 }
 
 .footer {
-  @apply flex justify-center items-center;
+  @apply flex justify-center items-center fixed lg:relative w-screen lg:w-auto;
 
   backdrop-filter: blur(10px);
-  position: fixed;
   bottom: 0;
-  width: 100vw;
   left: 0;
   height: 140px;
-  box-shadow: 0px 14px 5px #d4d3d7, -2px 6px 4px #ffffff;
 }
 
 .footer_child {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
+  @apply mx-auto w-11/12 lg:w-full;
 }
 
 .new_btn {
