--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,7 +88,7 @@ input {
 
   width: 100px;
   height: 100px;
-  border-radius: 50px;
+  border-radius: 25px;
   background: linear-gradient(145deg, #ebeaed, #ffffff);
   box-shadow: 5px 5px 10px #d4d3d7, -5px -5px 10px #ffffff;
 }
@@ -111,4 +111,19 @@ input {
 
   background-image: linear-gradient(#f76571, #f43a49);
   box-shadow: 1px 26px 30px -12px rgb(247 88 100);
+}
+
+.flash_red{
+  background-image: linear-gradient(#f76571, #f43a49);
+  box-shadow: 1px 26px 30px -12px #f75864;
+}
+
+.flash_dark{
+  background-image: linear-gradient(#3b3c42, #1f2023);
+  box-shadow: 1px 26px 30px -12px #3b3c42;
+}
+
+.lighter_neu {
+  background: linear-gradient(145deg, #ebeaee, #ffffff);
+  box-shadow: 5px 5px 10px #d4d3d7, -5px -5px 10px #ffffff;
 }
